--- a/templates/priceTemplate.html
+++ b/templates/priceTemplate.html
@@ -21,10 +21,12 @@
      display: flex;
      margin-top: 12px;
      margin-bottom: 8px;
-     text-align: center;
      font-weight: 600;
      font-size: 14px;
-     color: #000000;
+    }
+    .dateTitle {
+     font-size: 10px;
+     margin-right: 80px;
     }
     .twoColumnContainer {
      display: flex;
@@ -36,9 +38,8 @@
      width: calc(100% - 60px);
     }
     .manufacturerInfoRow {
-     font-size: 12px;
+     font-size: 10px;
      line-height: 13px;
-     font-weight: 400;
      margin-bottom: 1px;
     }
     .logoContainer {
@@ -46,13 +47,64 @@
      vertical-align: top;
      margin-top: -10px;
     }
+    .sectionTitle {
+     display: flex;
+     padding-top: 2px;
+     text-align: center;
+     letter-spacing: 0.7px;
+     font-size: 8px;
+     font-weight: 600;
+     background-color: #E9E9E9;
+    }
+    .delimiter {
+     display: flex;
+     height: 1px;
+     background-color: #979797;
+    }
+    .titlesRow {
+     display: flex;
+     padding: 2px 10px 0 10px;
+     background-color: #E9E9E9;
+     font-size: 8px;
+     vertical-align: bottom;
+     font-weight: 600;
+    }
+    .sizeContainer {
+     display: inline-block;
+     width: 90px;
+    }
+    .materialContainer {
+     display: inline-block;
+     width: 90px;
+    }
+    .sortContainer {
+     display: inline-block;
+     width: 80px;
+    }
+    .codeContainer {
+     display: inline-block;
+     width: 190px;
+    }
+    .priceContainer {
+     display: inline-block;
+     width: 50px;
+    }
+    .productRow {
+     display: flex;
+     padding: 2px 10px 0 10px;
+     font-size: 8px;
+     vertical-align: bottom;
+    }
   </style>
   <title>Price</title>
 
  </head>
  <body style="{margin: 20px 40px}">
  <div class="contentContainer">
-  <div class="title">Прайс лист на пиломатериалы</div>
+  <div class="title">
+   <span class="dateTitle">{{nowDate}}</span>
+   Прайс лист на пиломатериалы
+  </div>
   <div class="twoColumnContainer">
    <div class="manufacturerInfo">
     <div class="manufacturerInfoRow">
@@ -72,8 +124,32 @@
     <img src={{{image}}} height="54" width="54"  alt=""/>
    </div>
   </div>
-  <div>{{ manufacturerTitle }}</div>
+  <div class="sectionsContainer">
+   {{ #priceSections }}
+    <div class="sectionTitle">
+     {{title}}
+    </div>
+   <div class="delimiter" ></div>
+   <div class="titlesRow">
+    <div class="sizeContainer">Размеры, мм</div>
+    <div class="materialContainer">Тип древисины</div>
+    <div class="sortContainer">Сорт</div>
+    <div class="codeContainer">Артикул</div>
+    <div class="priceContainer">руб/шт</div>
+   </div>
+   <div class="delimiter" ></div>
+    {{#products}}
+    <div class="productRow">
+     <div class="sizeContainer">{{size}}</div>
+     <div class="materialContainer">{{material}}</div>
+     <div class="sortContainer">{{sort}}</div>
+     <div class="codeContainer">{{code}}</div>
+     <div class="priceContainer">{{price}}</div>
+    </div>
+    <div class="delimiter" ></div>
+    {{/products}}
+   {{ /priceSections }}
+  </div>
  </div>
-
  </body>
 </html>
